--- a/index.html
+++ b/index.html
@@ -11,16 +11,27 @@
 
     <header>
         <div class="header">
-            <div style="flex-basis: 220px"><img src="img/Logo-Blanc.png" width="222" height="102,28"/></div>
+            <div style="flex-basis: 100px"><img src="img/Logo-Blanc.png" width="222" height="102,28"/></div>
             <div><p>PRODUCTS</p></div>
             <div><p>NEW ARRIVAL</p></div>
             <div><p>CONTACT</p></div>
             <div class="right"><img src="img/Panier.png" width="49" height="40"/></div>
-            <div class="right"><img src="img/Compt.png" width="22" height="42"/></div>
+            <div><img src="img/Compt.png" width="22" height="42"/></div>
         </div>
     </header>
 
     <h1>HEADPHONES PRO MAX</h1>
-    <p>Test</p>
+    <br>
+
+    <div class="img-minature">
+      <div class="Layer1"><img name="xxx" src="img/Casque.png" width="600"></div>
+      <div class="Layer2"><img name="yyy" src="img/Oval.png" width="737"></div>     
+
+      <div class="miniatures"></div>
+      <div class="miniatures"></div>
+      <div class="miniatures"></div>
+    </div>
+    
+
   </body>
 </html>
