--- a/index.html
+++ b/index.html
@@ -24,13 +24,23 @@
     <br>
 
     <div class="img-minature">
-      <div class="Layer1"><img name="xxx" src="img/Casque.png" width="600"></div>
-      <div class="Layer2"><img name="yyy" src="img/Oval.png" width="737"></div>     
+        <div class="Layer1"><img name="xxx" src="img/Casque.png" width="600"></div>
+        <div class="Layer2"><img name="yyy" src="img/Oval.png" width="737"></div>     
 
       <div class="miniatures"></div>
       <div class="miniatures"></div>
       <div class="miniatures"></div>
     </div>
+
+    <br>
+    <br>
+
+
+    <h2>DESCRITION</h2>
+    <p class="texte">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
+      aliquip ex ea commodo consequat. </p>
     
 
   </body>
