--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="stylesheet" href="style.css"/>
     <meta charset="utf-8">
     <title>Test</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -23,25 +26,40 @@
     <h1>HEADPHONES PRO MAX</h1>
     <br>
 
-    <div class="img-minature">
-        <div class="Layer1"><img name="xxx" src="img/Casque.png" width="600"></div>
-        <div class="Layer2"><img name="yyy" src="img/Oval.png" width="737"></div>     
+    <div class="haut-de-page">
+      <div class="img-minature">
+          <div class="Layer1"><img name="xxx" src="img/Casque.png" width="600"></div>
+          <div class="Layer2"><img name="yyy" src="img/Oval.png" width="737"></div>     
 
-      <div class="miniatures"></div>
-      <div class="miniatures"></div>
-      <div class="miniatures"></div>
+        <div class="miniatures"></div>
+        <div class="miniatures"></div>
+        <div class="miniatures"></div>
+      </div>
+
+      <br>
+      <br>
+
+      <div class="partie-de-droite">
+        <div>
+          <h2>DESCRITION</h2>
+          <p class="texte">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
+            aliquip ex ea commodo consequat. </p>
+          <br>
+          <h3>COLORS</h3>
+          <br>
+          <h3>WEIGHT</h3>
+          <p.noire>120G</p.noire>
+          <h3>FREQUENCY</h3>
+          <p.a>15 HZ - 25 KHZ</p.a>
+          <br>
+          <h3>PRICE</h3>
+          <p.a>90 €</p.a>
+        </div>
+
+      </div>
     </div>
-
-    <br>
-    <br>
-
-
-    <h2>DESCRITION</h2>
-    <p class="texte">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
-      aliquip ex ea commodo consequat. </p>
-    
 
   </body>
 </html>
